Fix contrast

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,7 +5,7 @@
 $dark-navy-blue: #020d1d;
 $navy-blue: #0c1e3a;
 $light-navy: #112240;
-$lightest-navy: #466eb3;
+$lightest-navy: #6084c3;
 $very-light-navy: #aabaff;
 $xxl-light-navy: #6084c3;
 $navy-shadow: rgba(2, 12, 27, 0.7);
